# robot-operating-system-notes

./: .gitignore  README.md
bag-files/rosbag2_2022_09_15-08_29_20/: metadata.yaml  rosbag2_2022_09_15-08_29_20_0.db3
learnings/: notes
log/: latest_build
navigation2/: README.md
plugins/: README.md
plugins/src/polygon_base/: CMakeLists.txt  package.xml
plugins/src/polygon_base/src/: area_node.cpp
plugins/src/polygon_plugins/: CMakeLists.txt  package.xml  plugins.xml
plugins/src/polygon_plugins/src/: polygon_plugins.cpp
projects/ros2_workspace/log/: latest_build
projects/ros2_ws/install/: local_setup.sh  setup.sh
projects/ros2_ws/log/: latest_build  latest_test
projects/workspace/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
projects/workspace/log/: latest_build
projects/workspace/src/action_tutorials_cpp/: CMakeLists.txt
projects/workspace/src/action_tutorials_interfaces/: package.xml
projects/workspace/src/action_tutorials_py/: setup.py
projects/workspace/src/cpp_parameter_event_handler/: package.xml
projects/workspace/src/cpp_parameters/: CMakeLists.txt  package.xml
projects/workspace/src/cpp_parameters/launch/: cpp_parameters_launch.py
projects/workspace/src/cpp_srvcli/: package.xml
projects/workspace/src/more_interfaces/: CMakeLists.txt  package.xml
projects/workspace/src/more_interfaces/src/: publish_address_book.cpp
projects/workspace/src/polygon_base/: CMakeLists.txt
projects/workspace/src/polygon_base/src/: area_node.cpp
projects/workspace/src/polygon_plugins/: CMakeLists.txt  plugins.xml
projects/workspace/src/py_pubsub/: package.xml
projects/workspace/src/py_srvcli/: setup.py
projects/workspace/src/python_parameters/: package.xml  setup.py
projects/workspace/src/ros_test_package/: setup.cfg  setup.py
projects/workspace/src/turtorial_interfaces/: CMakeLists.txt  package.xml
projects/workspace/src/tutorial_interfaces/: CMakeLists.txt
projects/ws_launch/install/: setup.ps1
projects/ws_launch/launch/: launch.yaml
projects/ws_launch/log/: latest_build
projects/ws_launch/src/py_launch_example/: setup.py
resources/: Readme.md
ros2-for-beginners-udemy-course/: README.md
ros2-for-beginners-udemy-course/notes/: Nodes.md  Packages.md  PublisherSubscriber.md  README.md
ros2-for-beginners-udemy-course/ros2_ws/src/log/: latest_build
ros2-for-beginners-udemy-course/ros2_ws/src/my_cpp_pkg/: CMakeLists.txt
ros2-for-beginners-udemy-course/ros2_ws/src/my_cpp_pkg/src/: cpp_oops_node.cpp  my_first_node.cpp
ros2-for-beginners-udemy-course/ros2_ws/src/my_py_pkg/: package.xml  setup.py
ros2-for-beginners-udemy-course/ros2_ws/src/test_py_pkg/: setup.py
ros2-for-beginners/bags/hardware_status/: hardware_status_0.db3  metadata.yaml
ros2-for-beginners/notes/: Interfaces.md  LaunchFile.md  Nodes.md  Packages.md  Parameters.md  PublisherSubscriber.md  README.md  RosBagFile.md  Rqt.md  Service.md  Topic.md
ros2-for-beginners/robot_bringup/: package.xml
ros2-for-beginners/ros2_ws/src/install/: local_setup.sh  setup.sh  setup.zsh
ros2-for-beginners/ros2_ws/src/log/: latest_build
ros2-for-beginners/ros2_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ros2-for-beginners/ros2_ws/src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  robot_news_station.cpp  smartphone.cpp  template_cpp_node.cpp
ros2-for-beginners/ros2_ws/src/my_cpp_pkg/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2-for-beginners/ros2_ws/src/my_py_pkg/: package.xml  setup.py
ros2-for-beginners/ros2_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros2-for-beginners/ros2_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
ros2-for-beginners/ros2_ws/src/robot_interfaces/srv/: ComputeRectangleArea.srv
ros2-for-beginners/ros2_ws/src/test_cpp_pkg/: CMakeLists.txt
ros2-for-beginners/ros2_ws/src/test_py_pkg/: package.xml  setup.cfg  setup.py
ros2-for-beginners/ros_activity_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2-for-beginners/ros_activity_ws/src/custom_interfaces/msg/: LedStates.msg
ros2-for-beginners/ros_activity_ws/src/custom_interfaces/srv/: SetLed.srv
ros2-for-beginners/ros_activity_ws/src/test_py_pkg/: package.xml  setup.py
ros2-notes/: Actions.md
tf2/: README.md  example_robot.urdf.xacro  frames_2023-04-07_02.47.25.gv
tf2/src/tf2_cpp_package/: CMakeLists.txt  package.xml
tf2/src/tf2_python_package/: package.xml  setup.cfg  setup.py
tf2/src/tf2_python_package/launch/: turtle_tf2_demo.launch.py
tf2/src/tf2_python_package/tf2_python_package/: dtf_broadcaster.py  stf_publisher.py  turtle_tf2_listener.py
tf2_ws/: README.md
tf2_ws/src/learning_tf2_py/: package.xml  setup.py
tf2_ws/src/learning_tf2_py/launch/: turtle_tf2_demo.launch.py
tf2_ws/src/learning_tf2_py/learning_tf2_py/: helper.py  static_transform_publisher.py  transform_broadcaster.py  transform_listener.py
urdf/: README.md
urdf/src/robot/: package.xml
urdf/src/robot/urdf/: mark_one.urdf  mark_three.urdf.xacro  mark_two.urdf
urdf_ws/: README.md
urdf_ws/src/robot/: CMakeLists.txt
urdf_ws/src/robot/src/: robot.cpp
urdf_ws/src/robot/urdf/: config.rviz  (+2 more)
urdf_ws/src/urdf_tutorial_r2d2/: package.xml  setup.py
workspace/learn_workspace/: .gitignore
workspace/learn_workspace/install/: local_setup.sh  setup.sh
workspace/learn_workspace/src/action_tutorials_py/: package.xml  setup.cfg
workspace/learn_workspace/src/action_tutorials_py/action_tutorials_py/: fibonacci_action_client.py  fibonacci_action_server.py
workspace/learn_workspace/src/more_interfaces/: CMakeLists.txt
workspace/learn_workspace/src/more_interfaces/msg/: MotorDriver.msg
workspace/learn_workspace/src/more_interfaces/src/: publish_address_book.cpp  publish_motor_driver.cpp
workspace/ros2_launch_workspace/install/: local_setup.sh  setup.sh
workspace/ros2_launch_workspace/launch/: launch.py  launch.xml
workspace/ros2_launch_workspace/log/: latest_build
workspace/ros2_template_workspace/install/: setup.sh
workspace/ros2_workspace/install/: local_setup.sh
(+500 files in other folders)
